--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -84,6 +84,9 @@ html body .big-title {
   font-size: var(--big-text);
   font-weight: normal;
 }
+html body .wrong-form {
+  border: 1px solid var(--error-banner-icon) !important;
+}
 html body .medium-form {
   width: 190px;
   padding-right: 10px;
