--- a/REWORK/src/stylesheet/main/color.css
+++ b/REWORK/src/stylesheet/main/color.css
@@ -64,7 +64,7 @@
     --mouse-color: linear-gradient(90deg, rgb(250, 112, 154)28%, rgb(254, 225, 64) 100%);
     
     /* Note Banner */
-    --info-banner-bg: none;
+    --info-banner-bg: rgba(255, 255, 255, 0.1);
     --info-banner-icon: var(--bg-main-button);
     --info-banner-border: #ececec;
 
@@ -144,9 +144,9 @@
     --mouse-color: linear-gradient(90deg, rgba(164, 223, 170, 0.6)28%, rgba(107, 193, 224, 0.6) 100%);
     
     /* Note Banner */
-    --info-banner-bg: #232627;
+    --info-banner-bg: #2326278f;
     --info-banner-icon: #60cdff;
-    --info-banner-border: var(--info-banner-bg);
+    --info-banner-border: #2a2e30;
 
     --warning-banner-bg: #433519;
     --warning-banner-icon: #fce100;
