--- a/REWORK/src/stylesheet/main/main/main.scss
+++ b/REWORK/src/stylesheet/main/main/main.scss
@@ -185,15 +185,13 @@ html body {
                     margin-left: -3px;
                 }
             }
-            #upper-content a {
-                margin-left: 5px;
-                margin-right: 5px;
-                border-radius: 5px;
-            }
             a {
                 display: flex;
+                margin-left: 5px;
+                margin-right: 5px;
                 padding-top: 10px;
                 padding-bottom: 10px;
+                border-radius: 5px;
                 transition: .2s;
                 &:hover {
                     background-color: var(--nav-hyperlink);
@@ -216,16 +214,16 @@ html body {
                 #wifi {
                     position: absolute;
                     bottom: 85px;
-                    width: 100%;
+                    width: 310px;
                     height: 30px;
                     border-bottom: 1px solid var(--border-color);
                     img {
                         margin-top: 5px;
-                        margin-left: 4px;
+                        margin-left: -1px;
                     }
                     p {
                         margin-top: 5px;
-                        left: 5px;
+                        left: 0;
                     }
                 } 
                 .settings {
@@ -233,15 +231,13 @@ html body {
                     bottom: 35px;
                     width: 310px;
                     height: 30px;
-                    margin-left: 5px;
-                    border-radius: 5px;
                     img {
                         margin-top: 5px;
-                        margin-left: 4px;
+                        margin-left: -1px;
                     }
                     p {
                         margin-top: 5px;
-                        left: 5px;
+                        left: 0;
                     }
                 }
             }/*
