Added navigation animation

--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -128,7 +128,7 @@ html {
                             justify-content: center;
                             align-items: center;
                             cursor: pointer;
-                            .line {
+                            .line-additional {
                                 width: 100%;
                                 height: 1px;
                                 background: var(--border-color);
