--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -189,7 +189,7 @@ html body main form #main-content #additional-settings #details {
           align-items: center;
   cursor: pointer;
 }
-html body main form #main-content #additional-settings #details .line {
+html body main form #main-content #additional-settings #details .line-additional {
   width: 100%;
   height: 1px;
   background: var(--border-color);
